# ed_cloud

./: CMakeLists.txt  README.md  package.xml
config/: amigo.yaml  ed-cloud.rviz  test.yaml  test_client.yaml  test_server.yaml
experiments/: cadiz-lab-edrun.yaml  cadiz-lab-master.yaml  cadiz-lab-processor.yaml  cadiz-lab-processor2.yaml  output-client-0.json  scenario1-ed.yaml  scenario1-sim-objects.py  scenario1-sim.yaml
experiments/cadiz-lab/: cadiz-lab-model.yaml
experiments/cadiz-lab/cadiz-lab/: model.yaml
experiments/cadiz-lab/cadiz-lab-full/: model.yaml  walls_cadiz_lab.pgm
experiments/cadiz-lab/circular_table/: model.yaml
experiments/cadiz-lab/circular_table_over/: model.yaml
experiments/cadiz-lab/desktable/: model.yaml
experiments/cadiz-lab/desktable_over/: #model.yaml#  model.yaml
experiments/cadiz-lab/ed_table/: model.yaml
experiments/cadiz-lab/hexagonal_table/: model.yaml
experiments/cadiz-lab/hexagonal_table_over/: model.yaml
experiments/cadiz-lab/longtable/: model.yaml
experiments/cadiz-lab/longtable_over/: model.yaml
experiments/cadiz-lab/regular_table/: model.yaml
experiments/cadiz-lab/regular_table_over/: model.yaml
experiments/cadiz-lab/wardrobe/: model.yaml
experiments/cadiz-lab/wardrobe_over/: model.yaml
experiments/mtap/hypertable-query-test/: profile-query.yaml  testscript-global.bash  testscript.bash
experiments/sevilla-house/: model.yaml
experiments/sevilla-house/sevilla-house/: model.yaml  walls_sevilla_house.pgm
msg/: EntityCreateInfo.msg  EntityUpdateInfo.msg  WorldModelDelta.msg
src/: ed_hypertable.h  edsynctester.py  hypertable_plugin.cpp  hypertable_plugin.h  hypertable_reader.cpp  hypertable_reader.h  hypertable_writer.cpp  hypertable_writer.h  intruder_detection.cpp  intruder_detection.h  sync_client_plugin.cpp  sync_client_plugin.h  sync_server_plugin.cpp  sync_server_plugin.h  world_reader.cpp  world_reader.h  world_writer.cpp  world_writer.h
srv/: GetWorldModel.srv
test/: EDSyncTester.py  blackboard_test_plugin.cpp  blackboard_test_plugin.h  bouncing_cubes.cpp  bouncing_cubes.h  test_ed_cloud.py  test_ed_cloud_single_files.py  test_serialization.cpp
